# raftbox

./: CMakeLists.txt  README.md
core/: RaftLogMgr.cpp  RaftLogMgr.h  RaftMgr.cpp  RaftMgr.h  RaftNodeMgr.cpp
framework/: BaseLog.h  BaseMsg.cpp  BaseMsg.h  BaseMsgMgr.cpp  BaseMsgMgr.h  main.cpp
lib/: Define.h  RaftMgr.cpp  RaftMgr.h  RaftNodeMgr.h
proto/: core_proto.pb.cc  core_proto.pb.h  core_proto.proto
